--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ hat/ugfx/ugfx.py
 hat/ugfx/ugfx_wrap.cpp
 deps
 *.mo
+README.md
+RTIMULib.ini
+.vscode/settings.json
+arduino/weathersensors/font.ttf
